--- a/composer.json
+++ b/composer.json
@@ -81,7 +81,7 @@
         "fakerphp/faker": "^1.13",
         "itsgoingd/clockwork": "^5.1",
         "laravel/tinker": "^2.6",
-        "larastan/larastan": "^2.7.0",
+        "larastan/larastan": "^2.9",
         "symfony/css-selector": "~4.0",
         "symfony/dom-crawler": "~4.0",
         "laravel/sail": "^1.16",
@@ -90,7 +90,8 @@
         "pestphp/pest": "^3.0",
         "mockery/mockery": "^1.6",
         "pestphp/pest-plugin-laravel": "^3.0",
-        "laravel/dusk": "^8.2"
+        "laravel/dusk": "^8.2",
+        "aaronfrancis/solo": "^0.2.1"
     },
     "autoload": {
         "psr-4": {
