--- a/.env.dev
+++ b/.env.dev
@@ -37,8 +37,6 @@ SESSION_DRIVER=redis
 SESSION_CONNECTION=session
 REDIS_HOST=redis
 
-BROADCAST_DRIVER=log
-
 MAIL_DRIVER=smtp
 SMTP_HOST=mailpit
 SMTP_PORT=1025
@@ -106,3 +104,17 @@ SMARTXP_GOOGLE_CALENDAR_ID=smartxp_id@import.calendar.google.com
 PROTOPENERS_GOOGLE_CALENDAR_ID=protopeners_id@import.calendar.google.com
 
 GOOGLE_APPLICATION_CREDENTIALS=
+
+BROADCAST_DRIVER=pusher
+BROADCAST_CONNECTION=pusher
+PUSHER_HOST=soketi
+PUSHER_PORT=6001
+PUSHER_APP_ID=app-id
+PUSHER_APP_KEY=app-key
+PUSHER_APP_SECRET=app-secret
+PUSHER_APP_CLUSTER=eu
+PUSHER_SCHEME=http
+
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
