--- a/.env.prod
+++ b/.env.prod
@@ -34,8 +34,6 @@ REDIS_PASSWORD=redis_password
 REDIS_PORT=redis_port
 REDIS_SESSION_DB=redis_db_number
 
-BROADCAST_DRIVER=log
-
 MAIL_DRIVER=smtp
 SMTP_USERNAME=user
 SMTP_PASSWORD=password
@@ -102,3 +100,18 @@ SMARTXP_GOOGLE_CALENDAR_ID=smartxp_id@import.calendar.google.com
 PROTOPENERS_GOOGLE_CALENDAR_ID=protopeners_id@import.calendar.google.com
 
 GOOGLE_APPLICATION_CREDENTIALS=
+
+BROADCAST_DRIVER=pusher
+BROADCAST_CONNECTION=pusher
+PUSHER_HOST=soketi
+PUSHER_PORT=443
+PUSHER_APP_ID=app-id
+PUSHER_APP_KEY=app-key
+PUSHER_APP_SECRET=app-secret
+PUSHER_APP_CLUSTER=eu
+PUSHER_SCHEME=https
+
+#These variables are set via the github actions secrets, because our frontend is built there.
+#VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+#VITE_PUSHER_HOST="${PUSHER_HOST}"
+#VITE_PUSHER_PORT="${PUSHER_PORT}"
