--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,9 @@
         "litesaml/lightsaml": "^4.2",
         "ext-zlib": "*",
         "intervention/image-laravel": "^1.3",
-        "google/apiclient": "^2.15.0"
+        "google/apiclient": "^2.15.0",
+        "ably/ably-php": "^1.1",
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
